# FastYield

./: .gitattributes  .gitignore  LICENSE  PCS_FastYield.py  README.md  main.py  pyproject.toml
data_analysis/: saved_parameters.txt
examples/: main.py  plot_planet_classsifications.py
sim_data/: README.md
sim_data/Archive_table/: Archive_Pull.ecsv  Archive_Pull_ANDES_NO_SP_JQ1_without_systematics_BT-Settl+PICASO.ecsv  Archive_Pull_ANDES_NO_SP_JQ1_without_systematics_BT-Settl+flat.ecsv  Archive_Pull_ANDES_NO_SP_JQ1_without_systematics_BT-Settl+tellurics.ecsv  Archive_Pull_ANDES_NO_SP_JQ1_without_systematics_BT-Settl.ecsv  Archive_Pull_ANDES_NO_SP_JQ1_without_systematics_Exo-REM+PICASO.ecsv  Archive_Pull_ANDES_NO_SP_JQ1_without_systematics_Exo-REM+flat.ecsv  Archive_Pull_ANDES_NO_SP_JQ1_without_systematics_Exo-REM+tellurics.ecsv  Archive_Pull_ANDES_NO_SP_JQ1_without_systematics_Exo-REM.ecsv  Archive_Pull_ANDES_NO_SP_JQ1_without_systematics_PICASO+PICASO.ecsv  Archive_Pull_ANDES_NO_SP_JQ1_without_systematics_PICASO+flat.ecsv  Archive_Pull_ANDES_NO_SP_JQ1_without_systematics_PICASO+tellurics.ecsv  Archive_Pull_ANDES_NO_SP_JQ1_without_systematics_PICASO_reflected_only.ecsv  (+353 more)
src/: DataAnalysis_interface.py  FastCurves.py  FastCurves_interface.py  FastYield.py  FastYield_helpers.py  FastYield_interface.py  colormaps.py  config.py  data_processing.py  get_specs.py  molecular_mapping.py  molecular_mapping_save.py  prints_helpers.py  rotbroad.py  save_data_processing.py  signal_noise.py  signal_noise_estimate.py  spectrum.py  spectrum_save_systematic+PCA.py  throughput.py  untitled2.py  utils.py  utils_imports.py
tests/: test_import.py
(+2832 files in other folders)
